# lcm-dev

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  codecov.yml  environment.yml  hyperstates.md  pyproject.toml  setup.cfg
.envs/: testenv.yml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  question.md
.github/workflows/: main.yml
docs/: developer_notes.md  hyperstates.md
src/lcm_dev/: analytical_solution.py  config.py  create_plots.py  models.py  task_analytical_solution.py  task_create_plots.py  task_regression_test.py
tests/: test_analytical_simulate.py  test_analytical_solution.py  test_consumption_function.py  test_filler.py  test_utility.py  test_value_functions.py  test_wealth_thresholds.py  test_work_decision.py
