[metadata]
name = lcm_dev
description = This package aims to facilitate the development of the lcm package"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opensourceeconomics/lcm-dev
author = Tim Mensinger
author_email = tmensinger@uni-bonn.de
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    dags
    estimagic
    jax
    numpy
    pandas
python_requires = >=3.10
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lcm_dev=lcm_dev.cli:cli

[check-manifest]
ignore =
    src/lcm_dev/_version.py
